# openenv-support

./: Dockerfile  README.md  baseline_inference.py  baseline_results.json  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py  validate_new.txt
app/: main.py  models.py
app/static/: index.html
data/: clinical_data.py  knowledge_base.py  legal_data.py  pr_data.py  tickets.py
graders/: baseline_agent.py
server/: app.py
static/: index.html
tasks/: clinical_tasks.py  legal_tasks.py  pr_tasks.py  task1_classification.py  task2_drafting.py  task3_queue.py  task4_multiturn.py
